<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.vave.getbike.activity.LoginActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@android:color/white">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@mipmap/ic_launcher"/>

        <TextView
            android:id="@+id/toolbar_title"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="fonts/AvenirNextLTPro-Regular.otf"
            android:text="  getbike"
            android:textColor="@android:color/white" />
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


        <EditText
            android:id="@+id/mobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginRight="10dp"
            android:hint="Enter Mobile Number"
            android:inputType="phone"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/sign_up_text_view" />

        <EditText
            android:id="@+id/received_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/mobile"
            android:layout_alignStart="@+id/mobile"
            android:layout_below="@+id/mobile"
            android:hint="Enter OTP"
            android:inputType="number" />


        <LinearLayout
            android:id="@+id/optionsView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="38dp"
            android:layout_below="@+id/received_otp"
            android:layout_centerHorizontal="true">

            <Button
                android:id="@+id/login"
                android:background="@mipmap/sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"/>

        </LinearLayout>

        <TextView
            android:text="Not a member? Sign Up now"
            android:layout_width="wrap_content"
            android:textColor="@color/colorPrimary"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:id="@+id/sign_up_text_view"
            android:layout_marginBottom="200dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

        <Button
            android:text="SEND OTP"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/send_otp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />


    </RelativeLayout>

</LinearLayout>
