...
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:visibility="gone">

        <Button
            android:id="@+id/start_updates_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@color/thick_green"
            android:gravity="center"
            android:onClick="onStartTripClicked"
            android:text="START TRIP"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/stop_updates_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@color/red"
            android:gravity="center"
...
