<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_show_completed_ride"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.vave.getbike.activity.ShowCompletedRideActivity">

    <TextView
        android:id="@+id/totalDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_marginStart="@dimen/small_margin"
        android:text="Distance"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/locationCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_marginStart="@dimen/small_margin"
        android:text="Count"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"/>


    <fragment
        android:id="@+id/map"
        class="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>
