<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.vave.getbike.activity.DispatchActivity"
    tools:showIn="@layout/activity_dispatch">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@mipmap/getbike_logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="45dp"
        android:layout_below="@+id/imageView"
        android:layout_alignStart="@+id/imageView" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/login_button"
        android:layout_alignEnd="@+id/imageView" />


</RelativeLayout>
