...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Your Location"/>

            <TextView
                android:id="@+id/yourLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"/>

            <TextView
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Destination"/>

            <AutoCompleteTextView
                android:id="@+id/destination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="Type your destination"
                android:inputType="textPersonName"/>
...
            android:layout_height="0dp"
            android:layout_weight="25"
            android:background="@color/transparent"
            android:orientation="vertical"
            android:padding="5dp">
            <ImageButton
                android:id="@+id/takeRide"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="5dp"
                android:background="@drawable/take_ride_small"
                android:textColor="@color/white"/>

...
