...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="Ride ID"/>

    <TextView
        android:id="@+id/generatedRideId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"/>

    <TextView
        android:id="@+id/textView5"
...
